[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/slither_head_controller.gd" type="Script" id=1]
[ext_resource path="res://scripts/slither_controller.gd" type="Script" id=2]
[ext_resource path="res://scripts/camera.gd" type="Script" id=3]
[ext_resource path="res://scripts/root.gd" type="Script" id=4]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=5]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereShape" id=4]

[sub_resource type="SphereMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0.0313726, 0.0313726, 1 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.0941176, 0.266667, 0.933333, 1 )

[node name="root" type="Node"]
script = ExtResource( 4 )

[node name="food_root" type="Node" parent="."]

[node name="ground" type="MeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="ground"]

[node name="CollisionShape" type="CollisionShape" parent="ground/StaticBody"]
shape = SubResource( 2 )

[node name="slither1" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="camera" type="Camera" parent="slither1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0 )
projection = 1
size = 20.0
script = ExtResource( 3 )

[node name="slither_head_root" type="KinematicBody" parent="slither1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="head_area" type="Area" parent="slither1/slither_head_root"]
collision_layer = 2
collision_mask = 8

[node name="area_collision" type="CollisionShape" parent="slither1/slither_head_root/head_area"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 3 )

[node name="head_area2" type="Area" parent="slither1/slither_head_root"]
collision_layer = 2
collision_mask = 8

[node name="area_collision" type="CollisionShape" parent="slither1/slither_head_root/head_area2"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 3 )

[node name="collision" type="CollisionShape" parent="slither1/slither_head_root"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 4 )

[node name="slither_head" type="MeshInstance" parent="slither1/slither_head_root"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="nose" type="MeshInstance" parent="slither1/slither_head_root/slither_head"]
transform = Transform( -5.50764e-08, 0, 0.18, 0, 0.3, 0, -0.35, 0, -2.18557e-09, -5.96046e-08, 0, -1 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="GUI" parent="slither1" instance=ExtResource( 5 )]
